<resources>

    <string name="app_name">MobileLibrary</string>
    <string name="web_view_spinner_progress_dialog_message">正在加载...</string>
    <string name="web_view_load_error_body">加载失败，请检查网络并重试</string>
    <string name="web_view_load_error_title">error</string>

    <string name="no_network">网络连接不可用</string>

    <string name="update_now_version_latest">当前应用是最新版本</string>
    <string name="update_now_version_alert">是否更新到最新版</string>
    <string name="update_now_version_old">存在新版本</string>
    <string name="update_now_version_loading">检查更新中...</string>
    <string name="update_now_version_error">检查失败，请检查网络状态</string>

    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="no_sdcard">SD卡不存在或不可写</string>

    <string name="all_country">全国</string>
    <string name="any">不限</string>
    <string name="back">返回</string>

    <string name="login_user_name_or_mobile_hint">请输入用户名/手机号</string>
    <string name="login_user_name_hint">请输入用户名</string>
    <string name="login_verification_code_hint">请输入验证码</string>
    <string name="login_mobile_hint">请输入手机号</string>
    <string name="password_edit_hint">请输入密码</string>
    <string name="password_again_edit_hint">请再次输入密码</string>

    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="register_button">注 册</string>
    <string name="login_button">登 录</string>
    <string name="send_verification_code_button">获取验证码</string>

    <string name="prompt_user_name_error">请正确输入用户名</string>
    <string name="prompt_mobile_error">请正确输入手机号</string>
    <string name="prompt_verification_code_error">请输入验证码</string>
    <string name="prompt_password_different_error">两次密码不一致</string>
    <string name="prompt_password_null_error">请输入密码</string>

</resources>
