<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="@dimen/layout_toolbar_top_margin"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              android:paddingLeft="@dimen/layout_default_horizontal_padding"
              android:paddingRight="@dimen/layout_default_horizontal_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/register_content_layout_user_name_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_content_layout_user_name_textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_content_layout_user_name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_default_mini_height"
                    android:hint="@string/login_user_name_hint"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_content_layout_mobile_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_default_spacing"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_content_layout_mobile_textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_content_layout_mobile_editText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_default_mini_height"
                    android:hint="@string/login_mobile_hint"
                    android:inputType="number"
                    android:maxLength="11"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_default_spacing">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/register_content_layout_verification_code_textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_content_layout_verification_code_editText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_default_mini_height"
                        android:hint="@string/login_verification_code_hint"
                        android:inputType="number"
                        android:maxLength="6"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/register_content_layout_verification_code_send_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/send_verification_code_button"
                    android:textColor="@android:color/white"/>

            </FrameLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_content_layout_password1_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_default_spacing">

            <EditText
                android:id="@+id/register_content_layout_password1_editText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_default_mini_height"
                android:hint="@string/password_edit_hint"
                android:inputType="textPassword"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_content_layout_password2_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_default_spacing">

            <EditText
                android:id="@+id/register_content_layout_password2_editText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_default_mini_height"
                android:hint="@string/password_again_edit_hint"
                android:inputType="textPassword"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/register_content_layout_register_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_default_large_height"
        android:layout_marginTop="@dimen/layout_default_vertical_margin"
        android:text="@string/register_button"
        android:textColor="@android:color/white"/>

</LinearLayout>