<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="@dimen/layout_toolbar_top_margin"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              android:paddingLeft="@dimen/layout_default_horizontal_padding"
              android:paddingRight="@dimen/layout_default_horizontal_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_content_layout_user_name_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_content_layout_user_name_editText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_default_mini_height"
                android:hint="@string/login_user_name_or_mobile_hint"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_content_layout_password_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_default_spacing">

            <EditText
                android:id="@+id/login_content_layout_password_editText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_default_mini_height"
                android:hint="@string/password_edit_hint"
                android:inputType="textPassword"
                android:maxLength="32"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_content_layout_login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_default_large_height"
        android:layout_marginTop="@dimen/layout_default_vertical_margin"
        android:onClick="onLoginClick"
        android:text="@string/login_button"
        android:textColor="@android:color/white"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_content_layout_register_TextView"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/layout_default_spacing"
            android:layout_marginTop="@dimen/layout_default_spacing"
            android:onClick="onRegisterClick"
            android:padding="@dimen/layout_default_spacing"
            android:text="@string/register_button"/>

    </FrameLayout>

</LinearLayout>